# Balkan3D

./: .gitignore  Balkan3D.sln  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  NOTICE.txt  README.md
Balkan3D/: Balkan3D.vcxproj  Balkan3D.vcxproj.filters  CMakeLists.txt
Balkan3D/include/: Core.h  Window.h  pch.h
Balkan3D/include/Events/: Events.h  KeyCodes.h
Balkan3D/include/Graphics/: Camera.h  Framebuffer.h  GraphicsUtils.h  Light.h  Material.h  Mesh.h  Shader.h  Texture.h
Balkan3D/include/Logging/: Asserts.h  Loging.h
Balkan3D/include/Time/: Clock.h
Balkan3D/source/: EntryPoint.cpp  Window.cpp  main.cpp
Balkan3D/source/Events/: Events.cpp
Balkan3D/source/Graphics/: Camera.cpp  Framebuffer.cpp  GraphicsUtils.cpp  Light.cpp  Material.cpp  Mesh.cpp  Shader.cpp  Texture.cpp
Balkan3D/source/Logging/: Asserts.cpp  Logging.cpp
Balkan3D/source/Time/: Clock.cpp
Editor/: CMakeLists.txt  Editor.vcxproj
Editor/source/: fragment.glsl  main.cpp  vertex.glsl
Engine/: Engine.vcxproj
vendors/include/glad/: glad.c  glad.h
vendors/lib/SOIL2/: soil2.lib
